tests/paczka1/small_fuzzy/52739320.err
Error in line 2: QE2oJxuBdcu A144 61,2
Error in line 10: XW1kxI8mU68 A159 10,6
